// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Router renders correctly - found page 1`] = `
<p>
  <img
    alt="test"
    src="file"
  />
  <img
    alt="test"
    src="file"
  />
  Test
</p>
`;

exports[`containers/Router renders correctly - loading page 1`] = `
<div>
  Loading...
</div>
`;

exports[`containers/Router renders correctly - not found page 1`] = `
<div>
  Not Found.
  object
</div>
`;
